js/js.translator/testData/incremental/invalidation/singleMainFunction/main/l2.0.kt
package B

var mainInB = false

fun main() {
    mainInB = true
}
